infra/k8s/overlays/dev-multinode/mongodb-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
spec:
  template:
    spec:
      containers:
        - name: mongodb
